# tap-google-sheets

./: .gitignore  README.md  meltano.yml  pyproject.toml  pytest.ini  tox.ini
.github/: dependabot.yml
.github/workflows/: ci_workflow.yml
tap_google_sheets/: __init__.py  auth.py  client.py  streams.py  tap.py
tap_google_sheets/tests/: __init__.py  test_child_sheet_name_setting.py  test_core.py  test_discovered_stream_name.py  test_first_line_range.py  test_ignoring_unnamed_columns.py  test_key_properties_setting.py  test_retry_of_discovered_streams.py  test_service_account_auth.py  test_table_name_setting.py  test_underscoring_column_names.py  test_workload_identity.py  utils.py
