[tool.poetry]
name = "tap-google-sheets"
version = "0.4.0"
description = "`tap-google-sheets` is a Singer tap for google_sheets, built with the Meltano SDK for Singer Taps."
authors = ["Daniel Walker"]
keywords = [
    "ELT",
    "google_sheets",
]
license = "GNU Affero General Public License v3.0"

[tool.poetry.dependencies]
python = "<3.13,>=3.8.1"
requests = "^2.31.0"
singer-sdk = "^0.36.1"
click = "^8.1.7"

[tool.poetry.dev-dependencies]


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
tox = "^4.14.2"
flake8 = "^7.0.0"
black = "^24.4.0"
pydocstyle = "^6.3.0"
mypy = "^1.9.0"
types-requests = "^2.30.0"
isort = "^5.13.2"
responses = "^0.25.0"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_google_sheets"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-google-sheets = 'tap_google_sheets.tap:TapGoogleSheets.cli'
