[tool.poetry]
name = "tap-google-sheets"
version = "0.5.0"
description = "`tap-google-sheets` is a Singer tap for google_sheets, built with the Meltano SDK for Singer Taps."
authors = ["Daniel Walker"]
keywords = [
    "ELT",
    "google_sheets",
]
license = "GNU Affero General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
singer-sdk = "^0.42.1"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
tox = "^4.23.2"
flake8 = "^5.0.4"
black = "^24.8"
pydocstyle = "^6.1.1"
mypy = "^1.14.1"
types-requests = "^2.32.0"
isort = "^5.10.1"
responses = "^0.25.6"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_google_sheets"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-google-sheets = 'tap_google_sheets.tap:TapGoogleSheets.cli'
