[tool.poetry]
name = "tap-google-sheets"
version = "0.7.0"
description = "`tap-google-sheets` is a Singer tap for google_sheets, built with the Meltano SDK for Singer Taps."
authors = ["Daniel Walker"]
keywords = [
    "ELT",
    "google_sheets",
]
license = "GNU Affero General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.4"
singer-sdk = "^0.48.1"
google-auth = ">=2.29.0"
# boto3 backs the AWS WIF credential provider (EKS IRSA web identity token). It is
# scoped to Python >=3.10 -- the deployment runtime -- because boto3 pins an
# older urllib3 on 3.9 that conflicts with other dependencies. The fallback
# import is lazy, so 3.9 environments are unaffected unless they hit it.
boto3 = { version = ">=1.34.0", python = ">=3.10" }

[tool.poetry.dev-dependencies]
pytest = "^8.3.5"
tox = "^4.25.0"
flake8 = "^7.3.0"
black = "^25.11"
pydocstyle = "^6.1.1"
mypy = "^1.14.1"
types-requests = "^2.32.0"
isort = "^6.1.0"
responses = "^0.26.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_google_sheets"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-google-sheets = 'tap_google_sheets.tap:TapGoogleSheets.cli'
